# pytest-testdox

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
pytest_testdox/: constants.py  data_structures.py  formatters.py  models.py  parsers.py  plugin.py  terminal.py  wrappers.py
tests/: conftest.py  test_data_structures.py  test_formatters.py  test_markers.py  test_models.py  test_parsers.py  test_plugin.py  test_report.py
